[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "simple-markdown-crawler"
version = "0.1.0"
authors = [
  { name="Jose Maldonado", email="josemald89@gmail.com" },
]
description = "A multithreaded ðŸ•¸ï¸ web crawler that recursively crawls a website and creates a ðŸ”½ markdown file for each page"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.13.0",
    "markdownify>=1.1.0",
    "requests>=2.32.0",
]

[project.urls]
"Homepage" = "https://github.com/yukiteruamano/simple-markdown-crawler"
"Bug Tracker" = "https://github.com/yukiteruamano/simple-markdown-crawler/issues"
"Twitter" = "https://x.com/Yukiteru_Amano"

[project.scripts]
simple-markdown-crawler = "simple_markdown_crawler.cli:main"